    variables from local in the interactive shell.
  - Added a wsgi_app() function to WSGIApplication, wrapping __call__().
  - Added a make_response() method to WSGIApplication, so that handlers
    can return not only a Response object.
  - Refactoring: split pre_dispatch/dispatch/post_dispatch into separate
    functions. Makes it easier to override these methods in a middleware.
  - Added function ext.jinja2.get_template_attribute().

- ADDED: a Response object that extends werkzeug's Response, with default
  mimetype set to 'text/html'.

- ADDED: a Request object that extends werkzeug's Request. This is backwards
  compatible and stores url_adapter, matched rule and rule arguments.
  app.url_adapter, app.rule and app.rule_args are still set, but they will be
  removed on 1.0.

- ADDED: request as an attribute of RequestHandler. self.request is set on
  dispatch().

- ADDED: app.dev attribute, as a shortcut to the development flag set in
  config.

- ADDED: babel.cfg to the buildout directory, with configuration to extract
  translation messages using pybabel. Also added locale directory to the app
  dir.

- FIXED: logging debug level is set correctly now when in development.


Version 0.5.2 - May 06, 2010
============================
- Added a buildout setup to manage external dependencies. It is now
  the preferred method for setting and updating tipfy and app libraries.
  A full build will still be provided, though.

- Experimental support for loading all libraries using zipimport. The buildout
  setup is capable of generating the zip and it is included in sys.path by
  default. (issue #12)

- Tipfy can now be installed using easy_install.

- Fixed bug in ext.taskqueue.Mapper that would prevent changes from being
  written to the datastore. (Kaelten)

- Fixed debugger interactive console which was not working since Werkzeug 0.6.
  (issue #11)

- Fixed ext.blobstore, broken since SDK 1.3.3 which made some previously
  public blobstore functions protected.
